feat(ui): authentication using OIDC

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Cube Creator</title>
+    <script src="<%= VUE_APP_API_URL %>env-config.js"></script>
   </head>
   <body>
     <noscript>
