fix(ui): workaround for OIDC related URLs

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Cube Creator</title>
     <script src="<%= VUE_APP_API_URL %>env-config.js"></script>
+    <script type="text/javascript">
+      window.BASE_URL = "<%= BASE_URL %>";
+    </script>
   </head>
   <body>
     <noscript>
