--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -21,6 +21,8 @@
       };
     </script>
     <% } %>
+    <script>try{new EventTarget}catch(e){document.write('<script src="https://unpkg.com/@ungap/event-target@0.1.0/min.js"><\x2fscript>')}</script>
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   </head>
   <body>
     <noscript>
